@@ -1,3 +1,7 @@
+2004-04-24  Bruno Haible  <bruno@clisp.org>
+
+	* init.lisp: Remove vestiges of syscalls.
+
 2004-04-18  Bruno Haible  <bruno@clisp.org>
 
 	* clos-class2.lisp (ensure-class): Handle errors that might occur
